Add ability to import BIP32 keys and wallet information.

--- a/app/src/main/res/layout/activity_add_wallet.xml
+++ b/app/src/main/res/layout/activity_add_wallet.xml
@@ -17,4 +17,16 @@
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/AppTheme.PopupOverlay"/>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:id="@+id/addWalletContent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="20dp">
+
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
