--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,6 +18,28 @@
         app:popupTheme="@style/AppTheme.PopupOverlay"
         android:layout_alignParentTop="true"/>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar"
+        android:layout_marginTop="10dp">
+        <LinearLayout
+            android:id="@+id/content"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ProgressBar
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:indeterminateTint="@color/colorProgress"
+                android:indeterminateTintMode="src_atop"
+                style="@android:style/Widget.ProgressBar.Large"/>
+
+        </LinearLayout>
+    </ScrollView>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -49,7 +71,6 @@
                 android:id="@+id/blockHeight"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="123,000/145,000"
                 android:textAlignment="textEnd"/>
 
         </LinearLayout>
