--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,11 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/action_bar_height"
         android:background="@color/colorPrimary"
+        android:layout_margin="5dp"
         android:elevation="4dp"
+        android:translationZ="2dp"
+        android:translationX="-1dp"
+        android:translationY="-1dp"
         android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
         app:popupTheme="@style/AppTheme.PopupOverlay"
         android:layout_alignParentTop="true"/>
@@ -41,6 +45,7 @@
     </ScrollView>
 
     <LinearLayout
+        android:id="@+id/statusBar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -60,7 +65,6 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/blockHeightLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/blocks"
