--- a/app/src/main/res/layout/wallet_item.xml
+++ b/app/src/main/res/layout/wallet_item.xml
@@ -12,8 +12,10 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:padding="10dp"
-        android:background="@drawable/wallet_item_background"
-        android:onClick="onClick">
+        android:layout_margin="5dp"
+        android:background="@drawable/item_background"
+        android:onClick="onClick"
+        android:elevation="4dp">
 
         <ImageView
             android:id="@+id/walletExpand"
@@ -50,7 +52,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="gone"
+        android:layout_margin="10dp">
 
         <LinearLayout
             android:id="@+id/walletControls"
