Clean up JNI and add caching of wallet data.

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -6,4 +6,5 @@
     <item type="id" name="importWallet" />
     <item type="id" name="updateWallet" />
     <item type="id" name="backupWallet" />
+    <item type="id" name="removeWallet" />
 </resources>
