Add "public only" key warnings.

--- a/app/src/main/res/layout/wallet_item.xml
+++ b/app/src/main/res/layout/wallet_item.xml
@@ -36,6 +36,16 @@
             android:padding="5dp"
             android:textColor="#fff"/>
 
+        <ImageView
+            android:id="@+id/walletLocked"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:src="@drawable/ic_lock_white_36dp"
+            android:padding="5dp"
+            android:contentDescription="@string/locked"
+            android:onClick="onClick"
+            android:visibility="gone"/>
+
         <TextView
             android:id="@+id/walletName"
             android:layout_width="wrap_content"
@@ -52,7 +62,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:visibility="gone"
         android:layout_margin="10dp">
 
         <LinearLayout
@@ -104,6 +113,17 @@
                 android:onClick="onClick"/>
 
         </LinearLayout>
+
+        <TextView
+            android:id="@+id/walletLockedMessage"
+            android:drawableStart="@drawable/ic_lock_black_36dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="@style/TextAppearance.AppCompat.Small"
+            android:padding="5dp"
+            android:layout_marginBottom="5dp"
+            android:gravity="center_vertical"
+            android:text="@string/locked_message"/>
 
         <LinearLayout
             android:layout_width="match_parent"
