Update transaction layout/formatting.

--- a/app/src/main/res/layout/wallet_transaction_header.xml
+++ b/app/src/main/res/layout/wallet_transaction_header.xml
@@ -4,9 +4,7 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="4dp"
-    android:id="@+id/walletTransaction"
-    android:onClick="onClick">
+    android:layout_margin="4dp">
 
     <TextView
         android:id="@+id/amount"
@@ -14,6 +12,8 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/amount_title"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
         android:textStyle="bold"
         android:textAlignment="textEnd"/>
@@ -23,15 +23,20 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
+        android:layout_marginTop="8dp"
+        android:text="@string/time_title"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:textStyle="bold"/>
 
     <TextView
         android:id="@+id/count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/confirms_title"
         android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
+        android:textStyle="bold"
         android:textAlignment="textEnd"/>
 
 </LinearLayout>
