--- a/app/src/main/res/layout/wallet_item.xml
+++ b/app/src/main/res/layout/wallet_item.xml
@@ -63,14 +63,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_margin="10dp">
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp">
 
         <LinearLayout
             android:id="@+id/walletControls"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="5dp"
             android:gravity="end">
 
             <ImageView
@@ -78,7 +79,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:src="@drawable/ic_send_black_36dp"
-                android:padding="5dp"
                 android:layout_marginEnd="5dp"
                 android:contentDescription="@string/send"
                 android:onClick="onClick"/>
@@ -131,7 +131,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:paddingStart="10dp">
+            android:paddingStart="15dp">
 
             <TextView
                 android:id="@+id/walletPendingTitle"
