--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -82,6 +82,12 @@
             android:orientation="horizontal">
 
             <TextView
+                android:id="@+id/exchangeRate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"/>
+
+            <TextView
                 android:id="@+id/blocksLabel"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
