--- a/app/src/main/res/layout/wallet_item.xml
+++ b/app/src/main/res/layout/wallet_item.xml
@@ -27,15 +27,29 @@
             android:padding="5dp"
             android:contentDescription="@string/expand_compress"/>
 
-        <TextView
-            android:id="@+id/walletBalance"
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textStyle="bold"
-            android:gravity="center_vertical"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
             android:padding="5dp"
-            android:textColor="#fff"/>
+            android:gravity="center_vertical">
+
+            <TextView
+                android:id="@+id/walletBalance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textStyle="bold"
+                android:textColor="#fff"/>
+
+            <TextView
+                android:id="@+id/walletBitcoinBalance"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
+                android:textColor="#fff"/>
+
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/walletLocked"
@@ -67,7 +81,7 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp">
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/walletControls"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -77,7 +91,9 @@
             <ImageView
                 android:id="@+id/walletSend"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_toStartOf="@+id/walletReceive"
                 android:src="@drawable/ic_send_black_36dp"
                 android:layout_marginEnd="5dp"
                 android:contentDescription="@string/send"
@@ -86,7 +102,9 @@
             <ImageView
                 android:id="@+id/walletReceive"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_toStartOf="@+id/walletHistory"
                 android:src="@drawable/ic_add_circle_black_36dp"
                 android:padding="5dp"
                 android:layout_marginEnd="5dp"
@@ -96,7 +114,9 @@
             <ImageView
                 android:id="@+id/walletHistory"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_toStartOf="@+id/walletEdit"
                 android:src="@drawable/ic_history_black_36dp"
                 android:padding="5dp"
                 android:layout_marginEnd="5dp"
@@ -106,14 +126,16 @@
             <ImageView
                 android:id="@+id/walletEdit"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
                 android:src="@drawable/ic_edit_black_36dp"
                 android:padding="5dp"
                 android:layout_marginEnd="5dp"
                 android:contentDescription="@string/edit"
                 android:onClick="onClick"/>
 
-        </LinearLayout>
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/walletLockedMessage"
