--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -7,4 +7,5 @@
     <item type="id" name="updateWallet" />
     <item type="id" name="backupWallet" />
     <item type="id" name="removeWallet" />
+    <item type="id" name="authorize" />
 </resources>
