--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="colorPrimary">#f3b5</color>
     <color name="colorPrimaryDark">#f173</color>
     <color name="colorButton">#f13b</color>
+    <color name="colorButtonNegative">#fc32</color>
+    <color name="colorButtonLight">#f59c</color>
     <color name="colorNotification">#fe72</color>
     <color name="colorProgress">#53b5</color>
     <color name="colorPositive">#f4b4</color>
