--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -4,8 +4,11 @@
     <item type="id" name="createWallet" />
     <item type="id" name="recoverWallet" />
     <item type="id" name="importWallet" />
+    <item type="id" name="loadKey" />
     <item type="id" name="updateWalletName" />
     <item type="id" name="backupWallet" />
     <item type="id" name="removeWallet" />
     <item type="id" name="authorize" />
+    <item type="id" name="verifySeedSaved" />
+    <item type="id" name="skipCheckSeed" />
 </resources>
