--- a/app/src/main/res/layout/button.xml
+++ b/app/src/main/res/layout/button.xml
@@ -1,27 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/button"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="10dp"
-    android:layout_margin="15dp"
-    android:background="@drawable/button_background"
-    android:onClick="onClick"
-    android:elevation="4dp"
     android:gravity="center">
 
     <TextView
-        android:id="@+id/title"
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:padding="10dp"
+        android:layout_margin="15dp"
+        android:background="@drawable/button_background"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textStyle="bold"
-        android:gravity="center"
-        android:padding="5dp"
         android:textColor="#fff"
-        android:textAlignment="center"/>
+        android:textAlignment="center"
+        android:onClick="onClick"/>
 
 </LinearLayout>
